Standardize navigation bar spacing across pages

--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
-    <div class="flex justify-between px-4">
-      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Home</a>
-      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Services</a>
-      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">About</a>
-      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Contact</a>
+  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+    <div class="flex justify-evenly flex-wrap">
+      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
     </div>
   </nav>
 
