--- a/thank-you.html
+++ b/thank-you.html
@@ -38,6 +38,16 @@
     <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-28 h-auto" />
   </header>
 
+  <!-- Navigation -->
+  <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
+    <div class="flex justify-evenly flex-wrap">
+      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+    </div>
+  </nav>
+
   <!-- Thank You Message -->
   <main class="flex-grow flex flex-col items-center justify-center px-6 text-center">
     <!-- Animated Checkmark -->
