--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,157 @@
-<div>
-  <label for="name" class="block mb-2 font-semibold text-oliveGreen">Your Name</label>
-  <input
-    type="text"
-    name="name"
-    id="name"
-    required
-    class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-           focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-    placeholder="Jane Doe"
-    autocomplete="name"
-  />
-</div>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+  <meta charset="UTF-8" />
+  <title>Contact | Iron Dillo Cybersecurity</title>
+  <meta name="description" content="Get in touch with Iron Dillo Cybersecurity for consultations, risk assessments, and hands-on cyber defense." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<div>
-  <label for="email" class="block mb-2 font-semibold text-oliveGreen">Your Email</label>
-  <input
-    type="email"
-    name="_replyto"
-    id="email"
-    required
-    class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-           focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-    placeholder="you@example.com"
-    autocomplete="email"
-  />
-</div>
+  <!-- Fonts & Tailwind -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
+        }
+      }
+    }
+  </script>
 
-<div>
-  <label for="message" class="block mb-2 font-semibold text-oliveGreen">Message</label>
-  <textarea
-    name="message"
-    id="message"
-    rows="5"
-    required
-    class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
-           focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
-    placeholder="Write your message here..."
-  ></textarea>
-</div>
+  <!-- Google reCAPTCHA v2 -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+  <!-- 🛡 Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+</head>
+
+<body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
+
+  <!-- Header -->
+  <header class="text-center pt-8 max-w-3xl mx-auto">
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+  </header>
+
+  <!-- Navigation -->
+  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between px-4">
+      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Home</a>
+      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Services</a>
+      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">About</a>
+      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Main Contact Form -->
+  <main class="flex-grow max-w-xl w-full bg-white rounded-lg p-8 shadow-lg mx-auto">
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Contact Iron Dillo</h1>
+    <p class="text-armadilloBlack mb-8 text-center">
+      Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
+    </p>
+
+    <form
+      id="contact-form"
+      action="https://formspree.io/f/xldnbpdg"
+      method="POST"
+      class="space-y-6"
+      onsubmit="return onSubmit(event)"
+    >
+      <!-- Honeypot Field -->
+      <div style="display:none;">
+        <label for="gotcha">Leave this empty</label>
+        <input type="text" name="_gotcha" id="gotcha" autocomplete="off" />
+      </div>
+
+      <div>
+        <label for="name" class="block mb-2 font-semibold text-oliveGreen">Your Name</label>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          required
+          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
+                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
+          placeholder="Jane Doe"
+          autocomplete="name"
+        />
+      </div>
+
+      <div>
+        <label for="email" class="block mb-2 font-semibold text-oliveGreen">Your Email</label>
+        <input
+          type="email"
+          name="_replyto"
+          id="email"
+          required
+          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
+                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
+          placeholder="you@example.com"
+          autocomplete="email"
+        />
+      </div>
+
+      <div>
+        <label for="message" class="block mb-2 font-semibold text-oliveGreen">Message</label>
+        <textarea
+          name="message"
+          id="message"
+          rows="5"
+          required
+          class="w-full p-3 rounded bg-offWhite border border-armadilloGray text-armadilloBlack 
+                 focus:outline-none focus:ring-2 focus:ring-oliveGreen focus:border-oliveGreen"
+          placeholder="Write your message here..."
+        ></textarea>
+      </div>
+
+      <!-- reCAPTCHA -->
+      <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"></div>
+
+      <!-- Optional Redirect -->
+      <input type="hidden" name="_next" value="/thank-you.html" />
+
+      <button
+        type="submit"
+        class="w-full mt-4 bg-oliveGreen hover:bg-oliveDark text-white font-bold py-3 rounded-lg shadow-md transition"
+      >
+        Send Message
+      </button>
+    </form>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+  </footer>
+
+  <script>
+    // Prevent form submit if reCAPTCHA not verified
+    function onSubmit(event) {
+      const recaptchaResponse = grecaptcha.getResponse();
+      if (recaptchaResponse.length === 0) {
+        alert("Please verify you are not a robot.");
+        event.preventDefault();
+        return false;
+      }
+      return true;
+    }
+  </script>
+</body>
+</html>
