--- a/index.html
+++ b/index.html
@@ -65,15 +65,6 @@ animation: fadeIn 1.2s ease-out both;
     Iron Dillo Cybersecurity
   </h1>
 
-  <!-- Navigation -->
-  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
-    <div class="flex justify-between flex-wrap gap-2 px-4">
-      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen tracking-wide uppercase">Contact</a>
-    </div>
-  </nav>
 
   <p class="text-lg leading-relaxed max-w-xl mx-auto text-armadilloGray">
     <span class="block mb-2">
@@ -99,6 +90,16 @@ animation: fadeIn 1.2s ease-out both;
     </a>
   </div>
 </header>
+
+<!-- Navigation -->
+<nav class="bg-armadilloBlack rounded-md mb-8 w-full">
+  <div class="flex justify-evenly flex-wrap">
+    <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+    <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+    <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+    <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+  </div>
+</nav>
 
 <!-- Social icons -->
 <section class="fade-in max-w-3xl mx-auto mb-8 text-center">
