--- a/index.html
+++ b/index.html
@@ -1,136 +1,113 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-<meta charset="UTF-8" />
-<title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
-
-<script>
-  // Set this to false to disable maintenance mode
-  const maintenanceMode = false;
-  if (maintenanceMode) {
-    window.location.href = "maintenance.html";
-  }
-</script>
-
-<meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="preconnect" href="https://cdn.tailwindcss.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<!-- 🛡 Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="X-Frame-Options" content="DENY">
-<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-<meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
-<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-<link rel="icon" href="/assets/favicon.png" />
-<script src="https://cdn.tailwindcss.com"></script>
-<script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          armadilloBlack: "#1A1A1A",
-          armadilloGray: "#4A4A4A",
-          oliveGreen: "#6B7B3C",
-          oliveDark: "#55622F",
-          offWhite: "#F8F9FA"
-        },
-        fontFamily: {
-          inter: ["Inter", "sans-serif"]
+  <meta charset="UTF-8" />
+  <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
+  <meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <!-- Fonts & Tailwind -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
         }
       }
     }
-  };
-</script>
-<script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-<style>
-@keyframes fadeIn {
-from { opacity: 0; }
-to { opacity: 1; }
-}
-.fade-in {
-animation: fadeIn 1.2s ease-out both;
-}
-</style>
+  </script>
+  
+  <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+  <link rel="icon" href="/assets/favicon.png" />
 </head>
+
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
-<!-- Header with logo, title, and navigation -->
-<header class="p-8 text-center max-w-3xl mx-auto fade-in">
-  <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
-  <h1 class="text-4xl font-extrabold text-oliveGreen mb-4">
-    Iron Dillo Cybersecurity
-  </h1>
+  <!-- Header with logo and nav -->
+  <header class="p-8 text-center max-w-3xl mx-auto fade-in">
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Iron Dillo Cybersecurity</h1>
 
-  <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
-    <div class="flex justify-evenly flex-wrap">
-      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
-    </div>
-  </nav>
+    <!-- Navigation -->
+    <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
+      <div class="flex justify-between px-4">
+        <a href="/index.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Home</a>
+        <a href="/services.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Services</a>
+        <a href="/about.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">About</a>
+        <a href="/contact.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Contact</a>
+      </div>
+    </nav>
 
-  <p class="text-lg leading-relaxed max-w-xl mx-auto text-armadilloGray">
-    <span class="block mb-2">
-      <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> delivers protection for
+    <!-- Intro -->
+    <p class="text-lg leading-relaxed max-w-xl mx-auto text-armadilloGray mb-6">
+      <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
-      <span class="font-semibold text-armadilloBlack">rural operations</span> including farms, ranches, and independent shops.
-    </span>
-    <span class="block mb-4">
+      <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
       Founded by a <span class="text-oliveGreen font-medium">U.S. Army veteran</span> with a Master’s in Cybersecurity,
       Iron Dillo provides remote diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
-    </span>
-  </p>
+    </p>
 
-  <div class="mt-4 flex flex-wrap gap-4 justify-center">
-    <a href="/contact.html"
-       class="inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
-       Schedule Your $199 Security Check
-    </a>
-    <a href="/lindale-tyler-cybersecurity.html"
-       class="inline-block bg-armadilloBlack text-offWhite px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
-       Lindale & Tyler Cybersecurity
-    </a>
-  </div>
-</header>
+    <!-- Call to Action Buttons -->
+    <div class="mt-4 flex flex-wrap gap-4 justify-center">
+      <a href="/contact.html"
+         class="inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+         Schedule Your $199 Security Check
+      </a>
+      <a href="/lindale-tyler-cybersecurity.html"
+         class="inline-block bg-armadilloGray text-offWhite px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+         Lindale & Tyler Cybersecurity
+      </a>
+    </div>
+  </header>
 
-<!-- Social icons -->
-<section class="fade-in max-w-3xl mx-auto mb-8 text-center">
-  <p class="text-oliveGreen font-semibold mb-2">Connect with me</p>
-  <div class="inline-flex justify-center space-x-10">
-    <!-- GitHub -->
-    <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-      <!-- SVG here -->
-    </a>
-    <!-- Facebook -->
-    <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-      <!-- SVG here -->
-    </a>
-    <!-- LinkedIn -->
-    <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-      <!-- SVG here -->
-    </a>
-  </div>
-</section>
+  <!-- Social icons -->
+  <section class="fade-in max-w-3xl mx-auto mb-8 text-center">
+    <p class="text-oliveGreen font-semibold mb-4">Connect with me</p>
+    <div class="inline-flex justify-center space-x-10">
+      <!-- GitHub -->
+      <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <!-- Your GitHub SVG -->
+      </a>
+      <!-- Facebook -->
+      <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <!-- Your Facebook SVG -->
+      </a>
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
+        <!-- Your LinkedIn SVG -->
+      </a>
+    </div>
+  </section>
 
-<!-- Footer -->
-<footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
-  &copy; 2025 Iron Dillo. All rights reserved.
-  <p class="mt-4 text-offWhite italic">
-    Trusted by East Texas businesses. Veteran-owned. Mission-driven.
-  </p>
-  <div class="mt-2 space-x-4">
-    <a href="/privacy.html" class="hover:underline">Privacy</a>
-    <a href="/terms.html" class="hover:underline">Terms</a>
-    <a href="/commitment.html" class="hover:underline">Our Commitment</a>
-  </div>
-</footer>
-
+  <!-- Footer -->
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo. All rights reserved.
+    <p class="mt-4 text-offWhite italic">
+      Trusted by East Texas businesses. Veteran-owned. Mission-driven.
+    </p>
+    <div class="mt-2 space-x-4">
+      <a href="/privacy.html" class="hover:underline">Privacy</a>
+      <a href="/terms.html" class="hover:underline">Terms</a>
+      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
+    </div>
+  </footer>
 </body>
 </html>
