--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Header with logo and nav -->
   <header class="p-8 text-center max-w-3xl mx-auto fade-in">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="mx-auto mb-6 w-32 h-auto" />
     <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Iron Dillo Cybersecurity</h1>
 
     <!-- Navigation -->
@@ -84,15 +84,21 @@
     <div class="inline-flex justify-center space-x-10">
       <!-- GitHub -->
       <a href="https://github.com/Artilleryjoe/Cybersecurity-Portfolio" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <!-- Your GitHub SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12 .5C5.73.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
+        </svg>
       </a>
       <!-- Facebook -->
       <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <!-- Your Facebook SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
+        </svg>
       </a>
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-oliveGreen hover:text-oliveDark">
-        <!-- Your LinkedIn SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37 4.271 5.452v6.291zM5.337 7.433c-1.144 0-2.07-.927-2.07-2.07 0-1.144.926-2.07 2.07-2.07 1.143 0 2.07.926 2.07 2.07 0 1.143-.927 2.07-2.07 2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .792 0 1.77v20.451C0 23.207.792 24 1.77 24h20.451C23.208 24 24 23.207 24 22.222V1.77C24 .792 23.208 0 22.225 0z"/>
+        </svg>
       </a>
     </div>
   </section>
