--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
   </header>
 
   <!-- Navigation -->
-   <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
+     <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
