--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
     <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Iron Dillo Cybersecurity</h1>
 
     <!-- Navigation -->
-    <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto">
-      <div class="flex justify-between px-4">
-        <a href="/index.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Home</a>
-        <a href="/services.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Services</a>
-        <a href="/about.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">About</a>
-        <a href="/contact.html" class="text-offWhite font-semibold uppercase hover:text-oliveGreen">Contact</a>
-      </div>
-    </nav>
-
+      <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+    <div class="flex justify-evenly flex-wrap">
+      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+    </div>
+  </nav>
     <!-- Intro -->
     <p class="text-lg leading-relaxed max-w-xl mx-auto text-armadilloGray mb-6">
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
