--- a/about.html
+++ b/about.html
@@ -46,6 +46,8 @@
     </div>
   </nav>
 
+<title>About | Iron Dillo Cybersecurity</title>
+  
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
 
