--- a/services.html
+++ b/services.html
@@ -36,14 +36,13 @@
 </head>
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
-  <!-- Logo Header -->
-  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
-    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
+  <!-- Logo -->
+  <header class="text-center pt-6 max-w-3xl mx-auto fade-in">
+    <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-4 w-32 h-auto" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
+  <nav class="bg-armadilloBlack rounded-md mb-6 w-full fade-in">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -52,8 +51,14 @@
     </div>
   </nav>
 
+  <!-- Page Title -->
+  <section class="text-center mb-10 fade-in">
+    <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
+    <p class="text-armadilloGray mt-2">Practical, veteran-owned cybersecurity solutions for East Texas businesses and individuals.</p>
+  </section>
+
   <!-- Services Grid -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 grid gap-8 md:grid-cols-2 fade-in">
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-6 grid gap-8 md:grid-cols-2 fade-in">
     <section class="bg-white rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Security Consultations & Risk Assessments</h2>
       <p class="text-armadilloBlack leading-relaxed">Identify vulnerabilities, understand risks, and receive actionable recommendations in plain English.</p>
@@ -103,9 +108,13 @@
   
   <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-12 text-sm max-w-4xl mx-auto rounded-md fade-in">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+    <p class="mb-4 italic">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <div class="mt-2 space-x-4">
+      <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a>
+      <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+      <a href="/commitment.html" class="hover:underline text-oliveGreen">Our Commitment</a>
+    </div>
+    <p class="mt-4">&copy; 2025 Iron Dillo. All rights reserved.</p>
   </footer>
 
 </body>
