--- a/about.html
+++ b/about.html
@@ -34,14 +34,8 @@
 </head>
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
-  <!-- Logo + Title -->
-  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
-    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-oliveGreen">About Iron Dillo Cybersecurity</h1>
-  </header>
-
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mt-6 mb-10 w-full fade-in">
+  <nav class="bg-armadilloBlack rounded-md mt-6 mb-8 w-full fade-in">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -50,9 +44,15 @@
     </div>
   </nav>
 
+  <!-- Page Title -->
+  <header class="text-center max-w-3xl mx-auto fade-in">
+    <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+    <h1 class="text-4xl font-extrabold text-oliveGreen">About Iron Dillo Cybersecurity</h1>
+  </header>
+
   <!-- Main Content -->
   <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-12 fade-in">
-    
+
     <!-- Intro -->
     <section class="bg-white rounded-lg shadow-lg p-10 text-center">
       <p class="text-armadilloBlack leading-relaxed text-lg">
@@ -64,11 +64,7 @@
     <!-- Story -->
     <section class="bg-white rounded-lg shadow-lg p-10 flex flex-col md:flex-row items-center gap-10">
       <div class="w-48 h-48 md:w-56 md:h-56 flex-shrink-0">
-        <img 
-          src="/assets/Dilloman.png" 
-          alt="Kris McCoy" 
-          class="rounded-full object-cover w-full h-full shadow-md"
-        >
+        <img src="/assets/Dilloman.png" alt="Kris McCoy" class="rounded-full object-cover w-full h-full shadow-md">
       </div>
       <div>
         <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Meet Kris McCoy</h2>
