Add consistent favicon links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       }
     }
   </script>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 
 <body class="bg-offWhite text-armadilloGray font-inter flex flex-col min-h-screen">
