--- a/maintenance.html
+++ b/maintenance.html
@@ -39,6 +39,7 @@
       animation: fadeIn 1.2s ease-out both;
     }
   </style>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 <body class="font-inter bg-offWhite text-armadilloGray flex items-center justify-center min-h-screen">
 
