--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
 
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
   <link rel="canonical" href="https://irondillo.com/privacy.html" />
 </head>
 
