--- a/thank-you.html
+++ b/thank-you.html
@@ -30,6 +30,7 @@
       }
     }
   </script>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 <body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
 
