--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+  <link rel="icon" type="image/png" href="/assets/favicon.png">
 </head>
 
 <body class="min-h-screen flex flex-col bg-offWhite text-armadilloBlack font-inter">
