--- a/commitment.html
+++ b/commitment.html
@@ -29,6 +29,7 @@
       }
     }
   </script>
+  <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 
 <body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
